--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="fr.android.calculator_lab2">
+          package="fr.android.calculator">
 
     <application
             android:allowBackup="true"
@@ -8,9 +8,9 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.CalculatorLab2">
+            android:theme="@style/Theme.CalculatorLab2" android:fullBackupContent="@xml/backup_descriptor">
         <activity
-                android:name=".MainActivity"
+                android:name="fr.android.calculator.MainActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
